<resources>
    <string name="app_name">Weather Widget</string>
    <string name="key_wunderground_com">34dcc0a117458b08</string>
    <string name="undefined">undefined</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="undefined_day">1</string>
    <string name="undefined_temperature">0.0F</string>
    <string name="refresh">Refresh</string>
</resources>
